[gd_scene load_steps=8 format=3 uid="uid://dx0mxyrs7wimt"]

[ext_resource type="Script" uid="uid://b60aldgsxa44r" path="res://scripts/ui/MainUI.gd" id="1_5y5kr"]
[ext_resource type="Script" uid="uid://b4h7kip8xohgv" path="res://scripts/ui/CollectionScreen.gd" id="2_7xqmt"]
[ext_resource type="Script" uid="uid://c04jprppny8y6" path="res://scripts/ui/SummonScreen.gd" id="3_rtg8s"]
[ext_resource type="Script" uid="uid://bebu6xd7awcxs" path="res://scripts/ui/TerritoryScreen.gd" id="4_c84gv"]
[ext_resource type="Script" uid="uid://dkl6lpcqoqw2" path="res://scripts/ui/ResourceDisplay.gd" id="5_x6vnm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.25, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.4, 0.1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y5kr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="ResourcePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -60.0
offset_right = 400.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ResourceDisplay" type="HBoxContainer" parent="ResourcePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_x6vnm")

[node name="EssenceLabel" type="Label" parent="ResourcePanel/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
text = "Divine Essence: 1000"

[node name="VSeparator" type="VSeparator" parent="ResourcePanel/ResourceDisplay"]
visible = false
layout_mode = 2

[node name="CrystalLabel" type="Label" parent="ResourcePanel/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
text = "Crystals: 0"

[node name="TicketsLabel" type="Label" parent="ResourcePanel/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
text = "Summoning Tickets: 0"

[node name="MaterialsButton" type="Button" parent="ResourcePanel/ResourceDisplay"]
layout_mode = 2
text = "Materials"

[node name="MaterialsCountLabel" type="Label" parent="ResourcePanel/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
text = "Materials: 0 types"

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="TabContainer" type="TabContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer#Collection" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
script = ExtResource("2_7xqmt")
metadata/_tab_index = 0

[node name="TabContainer_Collection#ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer_Collection_ScrollContainer#VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer_Collection_ScrollContainer_VBoxContainer#TitleLabel" type="Label" parent="."]
layout_mode = 2
text = "Gods Collection"
horizontal_alignment = 1

[node name="TabContainer_Collection_ScrollContainer_VBoxContainer#GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="TabContainer#Summon" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
script = ExtResource("3_rtg8s")
metadata/_tab_index = 1

[node name="TabContainer_Summon#VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer_Summon_VBoxContainer#TitleLabel" type="Label" parent="."]
layout_mode = 2
text = "Summon Gods"
horizontal_alignment = 1

[node name="TabContainer_Summon_VBoxContainer#BasicSummon" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer_Summon_VBoxContainer_BasicSummon#BasicLabel" type="Label" parent="."]
layout_mode = 2
text = "Basic Summon (100 Essence)"
horizontal_alignment = 1

[node name="TabContainer_Summon_VBoxContainer_BasicSummon#BasicButton" type="Button" parent="."]
layout_mode = 2
text = "SUMMON"

[node name="TabContainer_Summon_VBoxContainer#Separator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TabContainer_Summon_VBoxContainer#PremiumSummon" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer_Summon_VBoxContainer_PremiumSummon#PremiumLabel" type="Label" parent="."]
layout_mode = 2
text = "Premium Summon (500 Essence) - Rare+ Guaranteed"
horizontal_alignment = 1

[node name="TabContainer_Summon_VBoxContainer_PremiumSummon#PremiumButton" type="Button" parent="."]
layout_mode = 2
text = "PREMIUM SUMMON"

[node name="TabContainer#Territory" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
script = ExtResource("4_c84gv")
metadata/_tab_index = 2

[node name="TabContainer_Territory#ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer_Territory_ScrollContainer#VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer_Territory_ScrollContainer_VBoxContainer#TitleLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 44.0
offset_top = 255.0
offset_right = 126.0
offset_bottom = 278.0
text = "Territories"
horizontal_alignment = 1

[node name="TabContainer_Territory_ScrollContainer_VBoxContainer#TerritoryList" type="VBoxContainer" parent="."]
layout_mode = 2
